# docauto

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  demo.cast  docs.md  prompt.txt  pyproject.toml  ruff.toml  setup.py  test.sh
docauto/: __init__.py  cli.py  config.py  config_parser.py  fs.py  generator.py  logger.py  presets.py  tracker.py  types.py  utils.py
docugen/: __init__.py  cli.py  config.py  exceptions.py  generator.py  models.py  parsers.py  services.py  tracker.py  transformers.py  utils.py
tests/: conftest.py  test_cli.py  test_code_fs.py  test_transformers.py
tests/files_for_testing/: funcs.py  trailing_whitespace_example.py
tests/generator/: test_generator_basic.py  test_generator_edge_cases.py  test_generator_sanitizers.py
